Add TW container queries plugin

--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -4,7 +4,7 @@ import { faDDLogo } from '../lib/ddIcon';
 ---
 <header class="h-16 sm:h-20 flex px-8 items-center">
 	<a href="/" class="contents text-primary">
-		<Icon icon={faDDLogo} style="rounded" />
+		<Icon icon={faDDLogo} size="2x" />
 		<span class="sr-only">David Demaree</span>
 	</a>
 </header>
