--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,8 @@ import BaseHead from '@components/BaseHead.astro';
 import SiteHeader from '@components/SiteHeader.astro';
 import BlogPostPreview from '@components/BlogPostPreview.astro';
 import Footer from '@components/Footer.astro';
-import Intro from "../content/intro.mdx";
+import Intro from '@components/home/Intro.astro';
+
 import { getAllPosts } from '@lib/posts';
 
 let title = "David Demaree's blog";
@@ -38,13 +39,7 @@ allPosts = await getAllPosts();
 		<SiteHeader />
 		<div class="wrapper">
 			<main class="content">
-				
-				<section class="intro mb-12 px-inset flex flex-col items-center">
-					<Image src="/assets/dd-stitch-transparent.png" alt="Man wearing Stitch cap" width="320" aspectRatio="0.7" class="mb-4 w-[clamp(160px,50vw,200px)]" />
-					<div class="intro text-2xl w-full max-w-content">
-						<Intro />
-					</div>
-				</section>
+				<Intro />
 
 				<section class="blog-posts w-minus-inset max-w-content mx-auto space-y-6 my-16" aria-label="Blog post list">
 					<header>
