--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -12,13 +12,18 @@ const { post } = Astro.props;
 const postUrl = `/p/${generateSlug(post.file)}`
 ---
 
-<article class="post-preview">
-	<div>
-		<header>
-			<p class="publish-date"><Date date={post.frontmatter.date} /></p>
-			<a href={postUrl}><h1 class="title">{post.frontmatter.title}</h1></a>
-		</header>
-		<p class="description">{post.frontmatter.description}</p>
+<article class="post-preview @container/blog-card flex flex-col">
+	<div class="flex flex-col @md:flex-row">
+		<div class="flex-1">
+			<header>
+				<a href={postUrl}><h1 class="title [font-size:clamp(22px,4cqi,44px)]">{post.frontmatter.title}</h1></a>
+				<p class="publish-date"><Date date={post.frontmatter.date} /></p>
+			</header>
+			<p class="description">{post.frontmatter.description}</p>
+		</div>
+		<figure class="w-full order-first @md:order-last @md/blog-card:w-[20cqi]">
+			<img class=" bg-gray-400 w-full aspect-video" />
+		</figure>
 	</div>
 </article>
 
