--- a/src/components/home/Intro.astro
+++ b/src/components/home/Intro.astro
@@ -3,11 +3,11 @@ import { Image } from "@astrojs/image/components";
 import imgDavidStitch from "../../content/images/dd-stitch-transparent.png";
 ---
 
-<section class="@container/intro intro [margin-inline:auto] max-w-4xl">
+<section class="@container/intro intro w-full max-w-4xl">
   <div
-    class="px-inset flex flex-col items-center gap-x-[6cqi] gap-y-8 @3xl:flex-row @3xl:items-start @md:py-[max(6cqi,6vw)]"
+    class="flex flex-col items-center gap-x-[5cqi] gap-y-8 @3xl:flex-row @3xl:items-start justify-center"
   >
-    <div class="w-[clamp(160px,36cqi,200px)] flex-shrink-0">
+    <div class="w-[clamp(160px,30cqi,240px)] flex-shrink-0">
       <Image
         src={imgDavidStitch}
         alt="Man wearing Stitch cap"
@@ -17,15 +17,15 @@ import imgDavidStitch from "../../content/images/dd-stitch-transparent.png";
     </div>
 
     <div
-      class="@container/intro-text w-full flex flex-col items-center leading-[1.25]"
+      class="@container/intro-text w-full flex flex-col items-center leading-[1.25] font-mona-sans"
     >
       <div
-        class="[font-size:clamp(21px,6cqi,31px)] max-w-[30ch] text-gray-500@ font-serif-headline font-light"
+        class="[font-size:clamp(22px,6cqi,31px)] max-w-[30ch] text-gray-500 [font-weight:450] [font-variation-settings:'wdth'_95]"
       >
         <p
-          class="[font-size:118%] font-normal leading-[1.18] mb-[0.5em] text-gray-600"
+          class="[font-size:162%] [font-weight:650] leading-none mb-[0.5em] text-gray-600 [font-variation-settings:'wdth'_87] [letter-spacing:-0.5px]"
         >
-          <b class="font-semibold text-black">Hi, I’m David Demaree</b>, a web
+          <b class="text-black/80 [font-weight:725]">Hi, I’m David Demaree</b>, a web
           coder, writer, and photographer based in suburban NYC.
         </p>
         <p>
