--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -1,10 +1,23 @@
 ---
 import Icon from './Icon.astro';
 import { faDDLogo } from '../lib/ddIcon';
+import { faHomeAlt, faNewspaper } from '@fortawesome/free-solid-svg-icons';
+import { faMastodon, faTwitter } from '@fortawesome/free-brands-svg-icons';
+import NavLink from './NavLink.astro';
 ---
 <header class="h-16 sm:h-20 flex px-8 items-center">
 	<a href="/" class="contents text-primary">
 		<Icon icon={faDDLogo} size="2x" />
 		<span class="sr-only">David Demaree</span>
 	</a>
+
+	<nav class="flex gap-x-2">
+		<!-- <NavLink label="Home" url="/" icon={faHomeAlt} /> -->
+		<NavLink label="Blog" url="/posts" icon={faNewspaper} />
+	</nav>
+
+	<nav class="flex gap-x-2">
+		<NavLink label="Mastodon" url="https://mastodon.social/@demaree" icon={faMastodon} alwaysHideLabel />
+		<NavLink label="Twitter" url="https://twitter.com/ddemaree" icon={faTwitter} alwaysHideLabel />
+	</nav>
 </header>
