--- a/src/pages/p/[slug].astro
+++ b/src/pages/p/[slug].astro
@@ -1,34 +1,26 @@
 ---
-import { Image, Picture } from '@astrojs/image/components';
 import BaseHead from '@components/BaseHead.astro';
 import SiteHeader from '@components/SiteHeader.astro';
 import BlogPost from '@components/BlogPost.astro';
 import Footer from '@components/Footer.astro';
-import PostPagination from '@components/PostPagination.astro';
-import Tweet from '@components/Tweet.astro';
+import { getSinglePost } from '@lib/wordpress';
 
-import { getAllPosts, getSinglePost } from '@lib/posts';
-import { getImage } from '@astrojs/image';
-
-const allPosts = await getAllPosts();
 const { slug } = Astro.params;
-const { post, prevPost, nextPost } = getSinglePost(allPosts, slug);
 
-const { Content, frontmatter: fm, featuredImage } = post;
-const { title, date, description, excerpt, ...frontmatter } = fm;
+const { post } = await getSinglePost(slug);
 
-let featuredImageData = {};
+let title = post?.title;
+let content = post?.content;
+let description = post?.excerpt;
+let date = post?.date;
 
-if(frontmatter.featuredImage) {
-	if(frontmatter.featuredImage.match(/^https?\:/)) {
-		featuredImageData = await getImage({src: frontmatter.featuredImage, width: 1400, aspectRatio: (5/4) });
-	}
-	else {
-		// Path relative to _this_ file, not the original .mdx
-		const featImageImport = await import( /* @vite-ignore */ `../../content/images/${frontmatter.featuredImage}` );
-		featuredImageData = await getImage({src: featImageImport.default, width: 1400 });
-	}
+if(!post) {
+	return new Response("Post not found", {
+		status: 404,
+		statusText: "Post not found"
+	})
 }
+
 ---
 <html lang="en">
 	<head>
@@ -38,11 +30,9 @@ if(frontmatter.featuredImage) {
 	<body>
     <SiteHeader />
 		<div class="wrapper">
-      <BlogPost title={title} date={date} subtitle={excerpt || description}>
-        <Content components={{ Tweet, Image }} />
+			<BlogPost title={title} date={date} subtitle={description}>
+				<Fragment set:html={content} />
 			</BlogPost>
-
-      <PostPagination nextPost={nextPost} prevPost={prevPost} />
 
 			<Footer />
 		</div>
