--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -11,6 +11,22 @@
   font-display: swap;
 }
 
+@font-face {
+  src: url("/fonts/SourceSerif4-VariableFont_opsz,wght.ttf");
+  font-family: "source-serif-4";
+  font-weight: 200 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  src: url("/fonts/SourceSerif4-Italic-VariableFont_opsz,wght.ttf");
+  font-family: "source-serif-4";
+  font-weight: 200 900;
+  font-style: italic;
+  font-display: swap;
+}
+
 :root {
   color-scheme: light;
 }
@@ -50,7 +66,7 @@
     --tw-prose-invert-th-borders: theme("colors.zinc.600");
     --tw-prose-invert-td-borders: theme("colors.zinc.700");
 
-    --prose-text-size: clamp(16px, 2.5vw, 18px);
+    --prose-text-size: clamp(16px, 2.5vw, 19px);
 
     --flow-spacing-xs: calc(var(--prose-text-size) * 0.375);
     --flow-spacing-sm: calc(var(--prose-text-size) * 0.75);
@@ -268,14 +284,15 @@
     display: grid;
     grid-auto-flow: row;
     /* prettier-ignore */
-    grid-template-columns: [full-start] 1fr [wide-start] minmax(var(--inset-x), 7ch) [content-start] min( calc(100% - (var(--inset-x) * 2)), 60ch ) [content-end] minmax(var(--inset-x), 7ch) [wide-end] 1fr [full-end];
+    grid-template-columns: [full-start] 1fr [wide-start] minmax(var(--inset-x), 7rem) [content-start] min( calc(100% - (var(--inset-x) * 2)), 45rem ) [content-end] minmax(var(--inset-x), 7rem) [wide-end] 1fr [full-end];
     justify-items: start;
 
     > :is(*, p, .aligncontent) {
       grid-column: content;
     }
 
-    > .alignwide {
+    > .alignwide,
+    > .size-large {
       grid-column: wide;
     }
 
