--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,5 +1,6 @@
 ---
 import Date from './Date.astro';
+import PostHeader from './PostHeader.astro';
 
 export interface Props {
 	title: string;
@@ -12,13 +13,7 @@ const { title, subtitle, date } = Astro.props;
 
 <div class="layout">
 	<article class="content">
-		<header class="post-header w-inset max-w-[720px] mx-auto my-[clamp(2rem,10vmin,4rem)] desc:mx-auto">
-			<h1 class="wp-block-post-title font-bold text-[clamp(34px,10vw,44px)] leading-[1.1] [font-variation-settings:'wdth'_110] text-zinc-900 my-0">{title}</h1>
-
-			{subtitle && <p class="my-0 mt-2 dd-post-excerpt text-[clamp(18px,5.6vw,24px)] [font-variation-settings:'wdth'_97] leading-tight text-zinc-600">{subtitle}</p>}
-
-			{date && <div class="font-medium mt-6 mb-0"><Date date={date} /></div>}
-		</header>
+		<PostHeader title={title} subtitle={subtitle} date={date} />
 		<main class="prose prose-lg prose-grid font-serif prose-figcaption:font-sans">
 			<slot />
 		</main>
