--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,16 +26,8 @@ allPosts = await getAllPosts();
 
 	<body>
 		<SiteLayout>
-			<main class="content w-inset max-w-6xl [margin-inline:auto] grid grid-cols-1 gap-x-[max(2rem,4vw)] justify-items-center lg:grid-cols-[min(35vw,410px)_1fr]">
+			<main class="">
 				<Intro />
-
-				<section class="blog-posts w-full max-w-4xl space-y-6" aria-label="Blog post list">
-					<header>
-						<h2 class="text-lg font-medium tracking-widest uppercase">Blog posts</h2>
-					</header>
-
-					{allPosts.map((p) => <BlogPostPreview post={p} />)}
-				</section>
 			</main>
 		</SiteLayout>
 	</body>
