--- a/src/components/SiteLayout.astro
+++ b/src/components/SiteLayout.astro
@@ -42,5 +42,6 @@ const { section } = Astro.props;
     display: grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
+    row-gap: 2rem;
   }
 </style>
