--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ allPosts = await getAllPosts();
 
 	<body>
 		<SiteLayout>
-			<main class="">
+			<main class="h-full w-inset max-w-[920px] mx-auto flex items-center">
 				<Intro />
 			</main>
 		</SiteLayout>
