--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -11,17 +11,19 @@ const { post: { featuredImage, ...post} } = Astro.props;
 const postUrl = `/p/${post.slug}`
 ---
 <article class="post-preview @container/blog-card flex flex-col">
-	<div class="flex flex-col gap-y-4 @md:flex-row">
+	<div class="flex flex-col gap-x-[6cqi] gap-y-[7cqi] @md:flex-row @md:items-center">
 		<div class="flex-1">
 			<header>
-				<a href={postUrl}><h1 class="title font-bold [font-size:clamp(22px,6cqi,34px)] [font-variation-settings:'wdth'_120] tracking-[-0.5px] leading-none">{post.title}</h1></a>
-				<p class="description mt-1 text-lg">{post.excerpt}</p>
-				<p class="publish-date"><Date date={post.date} /></p>
+				<a href={postUrl}><h1 class="title font-bold [font-size:min(1.875rem,_15cqi)] @lg:[font-size:2.25rem] [font-variation-settings:'wdth'_120] tracking-[-0.03ch] leading-[1.025]">{post.title}</h1></a>
+				<p class="description mt-[0.375em] @lg:[font-size:1.125rem] leading-snug max-w-prose">{post.excerpt}</p>
+				<p class="publish-date dateline mt-[0.75em]"><Date date={post.date} /></p>
 			</header>
 		</div>
 
-		{featuredImage && <figure class="w-full order-first @md:order-last @md/blog-card:w-[25cqi]">
-			<img src={featuredImage.sourceUrl} class=" bg-gray-400 w-full aspect-video object-cover object-top rounded-lg" />
+		{featuredImage && <figure class="w-full order-first @md:order-last @md:w-[clamp(180px,25cqi,216px)]">
+		<a href={postUrl} class="contents">
+			<img src={featuredImage.sourceUrl} class=" bg-gray-400 w-full aspect-video @md:aspect-square @2xl:aspect-[5/4] object-cover object-top rounded-lg border border-gray-300 shadow" />
+		</a>
 		</figure>}
 
 	</div>
