--- a/src/components/home/Intro.astro
+++ b/src/components/home/Intro.astro
@@ -19,7 +19,6 @@ import { faPaperPlane, faNewspaper } from '@fortawesome/free-solid-svg-icons';
         format="png"
       />
     </div>
-
     
     <div class="intro-lede-graf @container/lede">
       <p>
@@ -44,17 +43,6 @@ import { faPaperPlane, faNewspaper } from '@fortawesome/free-solid-svg-icons';
   </div>
 </section>
 
-<!-- <script>
-
-const lede = document.querySelector('.intro-lede-graf');
-const elemName = lede.querySelector('.intro-double-fancy .name');
-
-const phantomName = elemName.cloneNode(true) as Element;
-phantomName.classList.add('phantom');
-lede.appendChild(phantomName);
-
-</script> -->
-
 <style>
 
 .intro-grid {
@@ -63,6 +51,7 @@ lede.appendChild(phantomName);
   justify-content: center;
   justify-items: center;
   align-items: center;
+  column-gap: 2rem;
   column-gap: 6cqi;
 }
 
@@ -74,6 +63,12 @@ lede.appendChild(phantomName);
   width: clamp(200px, 67cqi, 270px);
   margin-bottom: 4cqi;
   margin-top: -4cqi;
+}
+
+@supports not (container-type: inline-size) {
+  .intro-image {
+    width: min(100%, 220px);
+  }
 }
 
 .intro .intro-hed {
@@ -101,6 +96,12 @@ lede.appendChild(phantomName);
   font-size: clamp(1.625rem, 5.5cqi, 2rem);
 }
 
+@supports not (container-type: inline-size) {
+  .intro .intro-lede-graf p {
+    font-size: 1.75rem;
+  }
+}
+
 .intro .punc {
   display: none !important;
 }
@@ -118,17 +119,20 @@ lede.appendChild(phantomName);
 .intro .name {
   @apply bg-red-500 text-white rounded-lg;
   font-size: max(2.5rem, 12.5cqi);
-  /* white-space: nowrap; */
   font-weight: 700;
   font-variation-settings: 'wdth' 110;
   margin-block: 0.2em;
-  /* border-block: 0.05em;
-  border-color: currentColor;
-  border-style: solid; */
   padding-block: 0.2em 0.15em;
   padding-inline: 0.2em;
   margin-inline: -0.2em;
   transform: rotate(0.8deg);
+}
+
+@supports not (container-type: inline-size) {
+  .intro .name {
+    font-size: 2.5rem;
+    display: inline-block;
+  }
 }
 
 .intro .intro-double-fancy .greeting {
@@ -141,11 +145,6 @@ lede.appendChild(phantomName);
 .intro .name.phantom {
   position: absolute;
   opacity: 0.2;
-}
-
-@container intro (min-inline-size: 20rem) {
-  .intro-grid {
-  }
 }
 
 @container intro (min-inline-size: 36rem) {
@@ -175,6 +174,48 @@ lede.appendChild(phantomName);
     width: 100%;
     grid-column: 1 / span 1;
     margin: 0;
+  }
+}
+
+@supports not (container-size: inline-size) {
+  @media (min-width: 600px) {
+
+    .intro-grid {
+      grid-template-columns: 25% 1fr;
+      grid-auto-flow: row;
+      row-gap: clamp(2rem, 5vw, 3rem);
+    }
+
+    .intro-grid .intro-lede-graf {
+      justify-self: start;
+    }
+
+    .intro-grid > * {
+      grid-column: 2 / span 1;
+    }
+
+    .intro .intro-lede-graf p {
+      font-size: 2.25rem;
+    }
+
+    .intro .name {
+      font-size: 3rem;
+    }
+
+    .intro-grid .intro-hed {
+      grid-column: 1 / span 1;
+      align-self: start;
+      justify-self: end;
+      width: auto;
+      margin-block: 0;
+    }
+
+    .intro-image {
+      width: 100%;
+      grid-column: 1 / span 1;
+      margin: 0;
+    }
+
   }
 }
 
