--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -42,13 +42,13 @@ function pageUrl(pageNum: number) : string {
 	</head>
 	<body>
 		<SiteLayout section="blog">
-      <main class=" w-inset max-w-[50rem] mx-auto @container/posts-list space-y-[10cqi]">
+      <main class=" w-inset max-w-[50rem] mx-auto @container/posts-list space-y-8 supports-[container-name]:space-y-[10cqi]">
         <header class=" text-purple-500 h-[26vh] flex flex-col items-center justify-center">
           <h1 class=" leading-none font-light [font-size:3.5rem] [font-variation-settings:'wdth'_140]">
             {currentPage === 1 ? "Posts" : `Page ${page}`}
           </h1>
         </header>
-        <div class="flex flex-col gap-y-[max(3rem,6cqi)]">
+        <div class="flex flex-col gap-y-12 supports-[container-name]:gap-y-[max(3rem,6cqi)]">
           {currentPosts.map(post => <BlogPostPreview post={post} />)}
         </div>
         <footer>
